more structure to the code, corrected switched scope values

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "php-getters-setters:allGettersSetter",
     "php-getters-setters:allGetters",
     "php-getters-setters:allSetters",
-    "php-getters-setters:showUI"
+    "php-getters-setters:showUI",
+    "php-getters-setters:newPropery"
   ]
 }
